cmake_minimum_required(VERSION 3.20)
project(system_programming)

set(CMAKE_CXX_STANDARD 14)

#add_executable(system_programming main.cpp)
#add_executable(chapter03_3-4_CommandPrmt chapter03/3-4/CommandPrmt.cpp)
#add_executable(chapter05_5-4_AdderProcess chapter05/5-4/AdderProcess.cpp)
#add_executable(chapter05_5-4_CreateProcess chapter05/5-4/CreateProcess.cpp)
#add_executable(chapter06_6-1_Operation1 chapter06/6-1/Operation1.cpp)
#add_executable(chapter06_6-1_Operation2 chapter06/6-1/Operation2.cpp)
add_executable(chapter06_6-3_KernelObjProb1 chapter06/6-3/KernelObjProb1.cpp)