cmake_minimum_required(VERSION 3.20)
project(system_programming)

set(CMAKE_CXX_STANDARD 14)

#add_executable(chapter03_3-4_CommandPrmt chapter03/3-4/CommandPrmt.cpp)
#add_executable(chapter05_5-4_AdderProcess chapter05/5-4/AdderProcess.cpp)
#add_executable(chapter05_5-4_CreateProcess chapter05/5-4/CreateProcess.cpp)
#add_executable(chapter07_7-2_MailSender chapter07/7-2/MailSender.cpp)
#add_executable(chapter07_7-3_PartAdder chapter07/7-3/PartAdder.cpp)
#add_executable(chapter07_7-3_NonStopAdderManager chapter07/7-3/NonStopAdderManager.cpp)
#add_executable(chapter06_6-1_Operation1 chapter06/6-1/Operation1.cpp)
#add_executable(chapter06_6-1_Operation2 chapter06/6-1/Operation2.cpp)
#add_executable(chapter06_6-2_kerObjShare chapter06/6-2/kerObjShare.cpp)
#add_executable(chapter06_6-3_KernelObjProb1 chapter06/6-3/KernelObjProb1.cpp)
#add_executable(chapter06_6-3_KernelObjProb2 chapter06/6-3/KernelObjPrb2.cpp)
#add_executable(chapter06_6-3_OperationStateParent chapter06/6-3/OperationStateParent.cpp)
#add_executable(system_programming main.cpp)

add_executable(chapter08_02_anonymous_pipe chapter08/02/anonymous_pipe.cpp)