cmake_minimum_required(VERSION 3.20)
project(system_programming)

set(CMAKE_CXX_STANDARD 14)

#add_executable(chapter03_3-4_CommandPrmt chapter03/3-4/CommandPrmt.cpp)
#add_executable(chapter05_5-4_AdderProcess chapter05/5-4/AdderProcess.cpp)
#add_executable(chapter05_5-4_CreateProcess chapter05/5-4/CreateProcess.cpp)
#add_executable(chapter07_7-2_MailSender chapter07/7-2/MailSender.cpp)
#add_executable(chapter07_7-3_PartAdder chapter07/7-3/PartAdder.cpp)
#add_executable(chapter07_7-3_NonStopAdderManager chapter07/7-3/NonStopAdderManager.cpp)
#add_executable(chapter06_6-1_Operation1 chapter06/6-1/Operation1.cpp)
#add_executable(chapter06_6-1_Operation2 chapter06/6-1/Operation2.cpp)
#add_executable(chapter06_6-2_kerObjShare chapter06/6-2/kerObjShare.cpp)
#add_executable(chapter06_6-3_KernelObjProb1 chapter06/6-3/KernelObjProb1.cpp)
#add_executable(chapter06_6-3_KernelObjProb2 chapter06/6-3/KernelObjPrb2.cpp)
#add_executable(chapter06_6-3_OperationStateParent chapter06/6-3/OperationStateParent.cpp)
#add_executable(system_programming main.cpp)
#add_executable(chapter08_02_anonymous_pipe chapter08/02/anonymous_pipe.cpp)
#add_executable(chapter09_02_ABOVE_NORMAL chapter09/02/ABOVE_NORMAL.cpp)
#add_executable(chapter09_02_normal chapter09/02/normal.cpp)
#add_executable(chapter09_02_below chapter09/02/below.cpp)
#add_executable(chapter12_01_CountThread chapter12/01/CountThread.cpp)
#add_executable(chapter12_02_ThreadAdderTwo chapter12/02/ThreadAdderTwo.cpp)
#add_executable(chapter12_02_strtok chapter12/02/strtok.cpp)
#add_executable(chapter12_02_CountThreadMultiThread chapter12/02/CountThreadMultiThread.cpp)
#add_executable(chapter12_02_SuspendCount chapter12/02/SuspendCount.cpp)
#add_executable(chapter13_02_CriticalSection chapter13/02/CriticalSection.cpp)
#add_executable(chapter13_02_CriticalSectionSyun chapter13/02/CriticalSectionSyun.cpp)
#add_executable(chapter02_MBCS1 chapter02/MBCS1.cpp)
#add_executable(chapter02_MBCS2 chapter02/MBCS2.cpp)
#add_executable(chapter02_WBCS1 chapter02/WBCS1.cpp)
#add_executable(chapter02_WBCS2 chapter02/WBCS2.cpp)
#add_executable(chapter02_WBCS3 chapter02/WBCS3.cpp)
add_executable(chapter02_WinString chapter02/WinString.cpp)
add_executable(chapter20_system_info chapter20/system_info.cpp)